--- a/templates/mainapp/index.html
+++ b/templates/mainapp/index.html
@@ -69,31 +69,43 @@
                                         <br>
 
 
-                                        <center><button data-product="{{beverage.id}}" data-action="add" class="button update-cart" role="button" style="background: #ffd1d1; border-radius: 6px; width: 110px; height: 50px;"><strong>Добавить корзину</strong></button>
-<!--                                            <div class="d-flex align-items-center justify-content-between"-->
-<!--                                                  style="background: #ffd1d1; border-radius: 6px; width: 110px; height: 36px; margin-right: 12px;">-->
+                                        <center>
+                                            {% if user.is_authenticated %}
+                                            <a href="" data-product="{{ beverage.id }}" data-action="add"
+                                               class="button update-cart" role="button"
+                                               style="background: #ffd1d1; border-radius: 6px; width: 110px; height: 50px; font-weight: bold;color:#f42f2c;">Добавить
+                                                корзину</a>
+
+                                            {% else %}
+                                            <a href="{% url 'account_login' %}"
+                                               class="button update-cart" role="button"
+                                               style="background: #ffd1d1; border-radius: 6px; width: 110px; height: 50px; font-weight: bold; color:#f42f2c;">Добавить
+                                                корзину</a>
+                                            {% endif %}
+                                            <!--                                            <div class="d-flex align-items-center justify-content-between"-->
+                                            <!--                                                  style="background: #ffd1d1; border-radius: 6px; width: 110px; height: 36px; margin-right: 12px;">-->
 
 
-<!--                                                <button data-product="{{beverage.id}}" data-action="remove"-->
-<!--                                                        class="button update-cart" role="button">-->
+                                            <!--                                                <button data-product="{{beverage.id}}" data-action="remove"-->
+                                            <!--                                                        class="button update-cart" role="button">-->
 
-<!--                                                    <i class="fas fa-minus"-->
-<!--                                                       style="color: #f42f2c;  bottom: 1px;"></i>-->
+                                            <!--                                                    <i class="fas fa-minus"-->
+                                            <!--                                                       style="color: #f42f2c;  bottom: 1px;"></i>-->
 
-<!--                                                </button>-->
-<!--                                                <div class="sc-himrzO cmCzds"-->
-<!--                                                     style="font-weight: 650; font-size: 14px; line-height: 20px;   color: #f42f2c;">-->
-<!--                                                    0-->
-<!--                                                </div>-->
-<!--                                                <button data-product="{{ beverage.id }}" data-action="add"-->
-<!--                                                        class="button update-cart" role="button">-->
+                                            <!--                                                </button>-->
+                                            <!--                                                <div class="sc-himrzO cmCzds"-->
+                                            <!--                                                     style="font-weight: 650; font-size: 14px; line-height: 20px;   color: #f42f2c;">-->
+                                            <!--                                                    0-->
+                                            <!--                                                </div>-->
+                                            <!--                                                <button data-product="{{ beverage.id }}" data-action="add"-->
+                                            <!--                                                        class="button update-cart" role="button">-->
 
-<!--                                                    <i class="fas fa-plus"-->
-<!--                                                       style="color: #f42f2c;  bottom: 1px;"></i>-->
+                                            <!--                                                    <i class="fas fa-plus"-->
+                                            <!--                                                       style="color: #f42f2c;  bottom: 1px;"></i>-->
 
-<!--                                                </button>-->
+                                            <!--                                                </button>-->
 
-<!--                                            </div>-->
+                                            <!--                                            </div>-->
                                         </center>
                                     </div>
 
@@ -160,31 +172,42 @@
                                         </p>
                                         <br>
                                         <center>
-                                            <button data-product="{{ food.id }}" data-action="add" class="button update-cart" role="button" style="background: #ffd1d1; border-radius: 6px; width: 110px; height: 50px;"><strong>Добавить корзину</strong></button>
-<!--                                            <div class="d-flex align-items-center justify-content-between"-->
-<!--                                                 style="background: #ffd1d1; border-radius: 6px; width: 110px; height: 36px; margin-right: 12px;">-->
+                                            {% if user.is_authenticated %}
+                                            <a  href="" data-product="{{ food.id }}" data-action="add"
+                                               class="button update-cart" role="button"
+                                               style="background: #ffd1d1; border-radius: 6px; width: 110px; height: 50px; font-weight: bold; color:#f42f2c;">Добавить
+                                                корзину</a>
+
+                                            {% else %}
+                                            <a href="{% url 'account_login' %}"
+                                               class="button update-cart" role="button"
+                                               style="background: #ffd1d1; border-radius: 6px; width: 110px; height: 50px; font-weight: bold; color:#f42f2c;">Добавить
+                                                корзину</a>
+                                            {% endif %}
+                                            <!--                                            <div class="d-flex align-items-center justify-content-between"-->
+                                            <!--                                                 style="background: #ffd1d1; border-radius: 6px; width: 110px; height: 36px; margin-right: 12px;">-->
 
 
-<!--                                                <button data-product="{{ food.id }}" data-action="remove"-->
-<!--                                                        class="button update-cart" role="button">-->
+                                            <!--                                                <button data-product="{{ food.id }}" data-action="remove"-->
+                                            <!--                                                        class="button update-cart" role="button">-->
 
-<!--                                                    <i class="fas fa-minus"-->
-<!--                                                       style="color: #f42f2c;  bottom: 1px;"></i>-->
+                                            <!--                                                    <i class="fas fa-minus"-->
+                                            <!--                                                       style="color: #f42f2c;  bottom: 1px;"></i>-->
 
-<!--                                                </button>-->
-<!--                                                <div class="sc-himrzO cmCzds"-->
-<!--                                                     style="font-weight: 650; font-size: 14px; line-height: 20px;   color: #f42f2c;">-->
-<!--                                                    0-->
-<!--                                                </div>-->
-<!--                                                <button data-product="{{ food.id }}" data-action="add"-->
-<!--                                                        class="button update-cart" role="button">-->
+                                            <!--                                                </button>-->
+                                            <!--                                                <div class="sc-himrzO cmCzds"-->
+                                            <!--                                                     style="font-weight: 650; font-size: 14px; line-height: 20px;   color: #f42f2c;">-->
+                                            <!--                                                    0-->
+                                            <!--                                                </div>-->
+                                            <!--                                                <button data-product="{{ food.id }}" data-action="add"-->
+                                            <!--                                                        class="button update-cart" role="button">-->
 
-<!--                                                    <i class="fas fa-plus"-->
-<!--                                                       style="color: #f42f2c;  bottom: 1px;"></i>-->
+                                            <!--                                                    <i class="fas fa-plus"-->
+                                            <!--                                                       style="color: #f42f2c;  bottom: 1px;"></i>-->
 
-<!--                                                </button>-->
+                                            <!--                                                </button>-->
 
-<!--                                            </div>-->
+                                            <!--                                            </div>-->
                                         </center>
                                     </div>
 
