--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -3,11 +3,18 @@
 {% block title %}Выход{% endblock %}
 
 {% block content %}
+<section class="relative about-banner">
+    <div class="overlay overlay-bg"></div>
+    <div class="container">
+        <div class="row d-flex align-items-center justify-content-center">
+            <div class="about-content col-lg-12">
 
+            </div>
+        </div>
+    </div>
+</section>
 <br><br>
-<br><br>
-<br><br>
-<br><br>
+
 <section class="vh-100 gradient-custom">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
