--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -4,10 +4,16 @@
 {% block title %}Регистрация{% endblock %}
 
 {% block content %}
+<section class="relative about-banner">
+    <div class="overlay overlay-bg"></div>
+    <div class="container">
+        <div class="row d-flex align-items-center justify-content-center">
+            <div class="about-content col-lg-12">
 
-<br><br>
-<br><br>
-<br><br>
+            </div>
+        </div>
+    </div>
+</section>
 <br><br>
 <section class="vh-100 gradient-custom">
     <div class="container py-5 h-100">
