--- a/templates/mainapp/contact.html
+++ b/templates/mainapp/contact.html
@@ -14,7 +14,7 @@
                     {{ title }}
                 </h1>
                 <p class="text-white link-nav"><a href="index.html">Главная </a> <span class="lnr lnr-arrow-right"></span>
-                    <a href="contact.html"> {{ title }}</a></p>
+                    <a href="{% url 'contact' %}"> {{ title }}</a></p>
             </div>
         </div>
     </div>
