--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -5,10 +5,16 @@
 {% block title %}Вход{% endblock %}
 
 {% block content %}
+<section class="relative about-banner">
+    <div class="overlay overlay-bg"></div>
+    <div class="container">
+        <div class="row d-flex align-items-center justify-content-center">
+            <div class="about-content col-lg-12">
 
-<br><br>
-<br><br>
-<br><br>
+            </div>
+        </div>
+    </div>
+</section>
 <br><br>
 
             <section class="vh-100 gradient-custom">
